--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'public/templates/pub_template.html'%}
+{% block title %} Movie App {% endblock %}
+{% block main %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1> Movie App</h1>
+            Hello {{ user }} with email {{email}}
+            <br>
+            <form action="/logout"><input type="submit" value="Salir"></form>
+            
+            
+        </div>
+    </div>
+</div>
+{% endblock %}
