--- a/app/templates/public/register.html
+++ b/app/templates/public/register.html
@@ -1,54 +1,39 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "public/templates/pub_template.html" %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
-    <title>Register</title>
-  </head>
-  <body>
+{% block title %} Entrar {% endblock %}
 
-    <div class="container">
-        <div class="wrapper fadeInDown">
-            <div id="form">
-                <h2 class="fadeIn first">
-                    Crea una cuenta
-                </h2>
-                <form action="/register"method="POST" name="register">
-                    <div class="form-group">
-                    <input type="text" id="name" class="fadeIn second form-control" name="name" placeholder="Nombre Usuario">
-                    <div class="invalid-feedback">El nombre de usuario puede tener de 3 a 15 caracteres</div>
-                    </div>
+{% block main %} 
 
-                    <div class="form-group">
-                    <input type="password" id="password" class="fadeIn second form-control" name="password" placeholder="Contraseña">
-                    <div class="invalid-feedback">La Contraseña debe contener al menos un simbolo y yo qkse tio</div>
-                    </div>
-
-                    <div class="form-group">
-                    <input type="text" id="email" class="fadeIn second form-control" name="email" placeholder="Correo Electronico">
-                    <div class="invalid-feedback">Correo invalido</div>
-                    </div>
-
-                    <input type="submit" class="fadeIn third" value="Registrarse">
-                  </form>
-
-            
-            <div id="formFooter">
-                <a class="underlineHover" href="/login">Ya tiene una cuenta?</a>
+<div class="container">
+  <div class="wrapper fadeInDown">
+      <div id="form">
+          <h2 class="fadeIn first">
+              Crea una cuenta
+          </h2>
+          <form action="/register"method="POST" name="register">
+              <div class="form-group">
+              <input type="text" id="name" class="fadeIn second form-control" name="name" placeholder="Nombre Usuario">
+              <div class="invalid-feedback">El nombre de usuario puede tener de 3 a 15 caracteres</div>
               </div>
+
+              <div class="form-group">
+              <input type="password" id="password" class="fadeIn second form-control" name="password" placeholder="Contraseña">
+              <div class="invalid-feedback">La Contraseña debe contener al menos un simbolo y yo qkse tio</div>
+              </div>
+
+              <div class="form-group">
+              <input type="text" id="email" class="fadeIn second form-control" name="email" placeholder="Correo Electronico">
+              <div class="invalid-feedback">Correo invalido</div>
+              </div>
+
+              <input type="submit" class="fadeIn third" value="Registrarse">
+            </form>
+
+      
+      <div id="formFooter">
+          <a class="underlineHover" href="/login">Ya tiene una cuenta?</a>
         </div>
-    </div>
-    <!-- Optional JavaScript -->
-    <script src="{{ url_for('static',filename='jsvalidation.js') }}"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="jsvalidation.js"></script>
-</body>
-</html>
+  </div>
+</div>
+{% endblock %}
+
