--- a/app/templates/public/templates/pub_template.html
+++ b/app/templates/public/templates/pub_template.html
@@ -8,13 +8,40 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href= "{{ url_for('static',filename='styles/style.css') }}">
-    <title>{% block title %}    
+    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/sidebar.css') }}">
+    <script src="https://kit.fontawesome.com/2f28bda0af.js" crossorigin="anonymous"></script>
+    <title>
+    {% block title %}    
         
-    {% endblock %}</title>
+    {% endblock %}
+    </title>
 
   </head>
   <body>
+      <nav id='navbarmain' class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Movie App</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarNavDropdown" class="navbar-collapse collapse">
+            <ul class="navbar-nav mr-auto">
+              
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                  <i class="menuicon navbar-right far fa-user-circle fa-2x"  onclick="openNav()" style="color:rgb(201, 201, 201)";></i>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="/profile">Perfil</a>
+      <a href="#">Contacto</a>
+      <a href="/logout">Salir</a>
+    </div>
+    
     {% block main %}    
     
     
@@ -22,6 +49,7 @@
     {% endblock %}
     <!-- Optional JavaScript -->
     <script src="{{ url_for('static',filename='jsvalidation.js') }}"></script>
+    <script src="{{ url_for('static',filename='sidebar.js') }}"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
