--- a/app/static/styles/sidebar.css
+++ b/app/static/styles/sidebar.css
@@ -10,7 +10,10 @@
   transition: 0.5s;
   padding-top: 60px;
 }
-
+.menuicon{
+  padding: 0 0 0 40px;
+  margin: 0 0 0 35px;
+}
 .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -45,10 +48,6 @@
   background-color: #444;
 }
 
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
