--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,13 +1,19 @@
 
-/* BASIC */
 
+.succes{
+  background: green;
+}
+.error{
+  background: red;
+}
 html {
-    background-color: #56baed;
+    background-color: white;
   }
   
   body {
     font-family: "Poppins", sans-serif;
-    height: 100vh;
+    height: 95vh;
+    background-color: white;
   }
   
   a {
@@ -32,26 +38,33 @@ html {
 .button,form{
     text-align:center;
 }
+
+.navbar ul li a{
+  color: white !important;
+  margin-left: 15px;
+}
+textarea {
+  width: 300px;
+  height: 150px;
+}
   
-  
-  
-  /* STRUCTURE */
+ 
   
   .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column; 
     justify-content: center;
-    width: 100%;
+    width: 95%;
     min-height: 100%;
-    padding: 20px;
+    
   }
   
   #form {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
-    padding: 30px;
+    padding: 20px;
     width: 90%;
     max-width: 450px;
     position: relative;
@@ -64,7 +77,7 @@ html {
   #formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
-    padding: 25px;
+    padding: 20px;
     text-align: center;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
@@ -72,7 +85,7 @@ html {
   
   
   
-  /* TABS */
+ 
   
   h2.inactive {
     color: #cccccc;
@@ -85,10 +98,10 @@ html {
   
   
   
-  /* FORM TYPOGRAPHY*/
+  
   
   input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #56baed;
+    background-color: black;
     border: none;
     color: white;
     padding: 15px 80px;
@@ -157,7 +170,7 @@ html {
   
   
   
-  /* ANIMATIONS */
+
   
 
   .fadeInDown {
@@ -255,7 +268,7 @@ html {
   
   
   
-  /* OTHERS */
+ 
   
   *:focus {
       outline: none;
@@ -265,6 +278,4 @@ html {
     width:60%;
   }
   
-    #navbarmain{
-    background-color: #56baed;
-    }
+    
