--- a/app/templates/public/login.html
+++ b/app/templates/public/login.html
@@ -1,5 +1,8 @@
-{% extends "public/templates/pub_template.html" %}
-
+{% extends 'public/templates/pub_template.html' %}
+{% block style %} 
+<link rel="stylesheet" href= "{{ url_for('static',filename='styles/style.css') }}"> 
+<script src="https://kit.fontawesome.com/2f28bda0af.js" crossorigin="anonymous"></script>
+{% endblock %}
 {% block title %} Entrar {% endblock %}
 
 {% block main %} 
