--- a/app/templates/public/templates/pub_template.html
+++ b/app/templates/public/templates/pub_template.html
@@ -55,8 +55,8 @@
     
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <a href="/login">Login</a>
     <a href="/profile">Perfil</a>
-    <a href="#">Contacto</a>
     <a href="/logout">Salir</a>
   </div>
     
