--- a/app/templates/public/discover.html
+++ b/app/templates/public/discover.html
@@ -37,6 +37,12 @@
         <option value="18">Drama</option>
         <option value="10751">Family</option>
         <option value="14">Fantasy</option>
+        <option value="10402">Music</option>
+        <option value="9648">Mystery</option>
+        <option value="10749">Romance</option>
+        <option value="53">Thriller</option>
+        <option value="10752">War</option>
+        <option value="37">Western</option>
   </select>
 
   <div  class="range-wrap mt-2">
