--- a/app/templates/public/templates/pub_template.html
+++ b/app/templates/public/templates/pub_template.html
@@ -39,6 +39,9 @@
               <li class="nav-item active">
                   <a class="nav-link fas fa-star" href="/favorites">Favorites</a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link fa fa-user" href="/favorites">Register</a>
+            </li>
               
           </ul>
       </div>
